# cows-project

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  nginx.conf  notes.md  pyproject.toml  pytest.ini
cows_project/: Dockerfile  Dockerfile.dev  Dockerfile.nginx  Dockerfile.test  django.env  docker-compose-dev.yaml  docker-compose.yaml  entrypoint.sh  entrypoint_test.sh  manage.py  nginx.conf  pyproject.toml
cows_project/cows/: admin.py  models.py  serializers.py  tests.py  views.py
cows_project/cows/migrations/: 0001_initial.py  0002_alter_cow_sex.py
cows_project/cows_project/: asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
help/: Dockerfile  docker-compose.yaml
source/: app.py  cows.py  models.py  schemas.py
