[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["cichy767 <vegitto767@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
django = "^5.0.6"
djangorestframework = "^3.15.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
